@@ -4,16 +4,30 @@ Hash: SHA256
 AUX postinstall-en.txt 830 SHA256 ff1b9004e65d7a46a7d94b23e2ea90563d5703f2afb45b9dec6ff7e750e788dc SHA512 1d753f23faead95249d2a691da4187c7882400b308fbd2ab1c9b55ca109deb0f7f3e9414a9e6b59a74341706bc6d698745aecc38283c02e9daea555b9bc04bfc WHIRLPOOL 27c73d7dd50391fc2305ee08c138c316fea6b56458c375c317a455fd8ea43e32542a015c4911c48a93d912e1a875490e8d6523de312349c6d5d33506c68a661a
 DIST drupal-6.35.tar.gz 1112024 SHA256 52940d903f34df09e4a52af9038ad583b39574269e7806c67260843598a8229a SHA512 7194191b73ddf8546ac8f2fc542b9a8ced69664eedfb0c6b85dc4d717bc6e6c4b08c30c67424f2f318025c2d702179f0b11aeea7462bf72fd0bb60be7a3e697f WHIRLPOOL 3e38df209f23a1710369295016bf65cb1467c3b99091d38fc10592a71fd69f6bce7f63635acc4ccb8ab84b968987b9b556a39ef705a6d1f594e539713d436f81
 DIST drupal-7.36.tar.gz 3244905 SHA256 72761e3e206e8081e29bea819a3f2cd0886f93a6ef9b2cdfa59a077f2e955391 SHA512 7991ecad4a073e81a40e75ad3309e85b996f673d38a0d0c286faa7717ca7dc7347c3ec8ab9dd3cdcaed3a195d951531d1c62c1c7b2ea3812fbf0727926f5dcbc WHIRLPOOL b3722b049ff9ac4fd6e30092ecc90e49e646f6af1036f81e8aae4a3fd41c090cfc10c0f7c0d6a4aebec7ab32b6306b3ab7a519206a8494b840afb5e709d1e3ef
+DIST drupal-7.37.tar.gz 3244291 SHA256 652e051faeec46d2c3e327758739e488bd77ef33ff94a48fb292e244df2a8f70 SHA512 ffc4c4f4371accc0d552208b8dd4c1145c82a29778a72ca6ead099b5a22874455825d84ff3bee60723404b7cb7450737898f229f42621f7fffe84b726d323195 WHIRLPOOL 54a5a03238a0366c7613fe4f75382020c682643d03bfdebfc28cba1d9137004620bacae88035c97bf563a44ee0bbaefb1baaf40f2ebd18473bc99441f3171afe
+DIST drupal-8.0.0-beta10.tar.gz 10296679 SHA256 ebbac899522099fe40844d423b02ff43451f1de4aa03852d3e529603591d309b SHA512 4183fb3fdb258f4d9ece79a1b87dd709c60558bd3ba3bc3e9ac97ebbab6dde4481669ceda3c5bd2615f972b804bd35afa03ae8e6d995958ca665fa144a3b1f18 WHIRLPOOL 9f3d158dab36cbb6fd533f800811165c2d49b9364a7e80f8fe1e7c83efdd755d908cc134a990becbe858f8d9661e70ad2cd482377657ceac4ae8270ce8c5390d
 DIST drupal-8.0.0-beta9.tar.gz 10044027 SHA256 234e719764862560d78fa9813f5fd0fdb02ecd61c25f87c4aae66a7b90206306 SHA512 960a3eed185cc54ac52ac17c61b57582d2c2fd8c7a9b743ea17623bb52e85cc92e1f2a9d51bbd0a3bf8e565f86c3bbe0fed91acb06d8ff6422253dc353e345c3 WHIRLPOOL 33c4b2af3cce9163d3a8ca02eb40c8603913db5a95ae041a7d98eecab81e5f7aa760a805d693c293d865de1969948c15d3b4d658ea0db14d60d0f82e6acceb0b
 EBUILD drupal-6.35.ebuild 1604 SHA256 9f6d6e630e37de53e76f9fcaff66803aaf1d64ba21534faea88158a3d889f8a5 SHA512 8fd06b73aa7f423c24e468d49085c9ea670199af9e7251e6959948b64a8cb49afc643b5130cf57b201b282474e9caf1cf9da44f723c1a6b982957ae00898586f WHIRLPOOL 55e86e9395ad2c2c139483a59744110ae2cba04d05aa1803decff9ed1907a2bc4a721cb12782fd4dac503dbf08424687eca01c2efe63deaa5089e5f4f686fd50
 EBUILD drupal-7.36.ebuild 1877 SHA256 cfb75c4127d675bd32ffba5f21d64c7f3f851c6915b3b603074ba13f5971b39c SHA512 c76a0be8307626a2e82e3ba493a5db0992db67f65de37474e04bf9ba4a0b7603974d4d500cccd9cd9010f4276755a049f4709385e0e269d03f5f7d585bead61c WHIRLPOOL 81646c5dc245028c101fadc097b1fe5273b278cb96151113c39ded0c125821fd882ce92280ecd7c6438a783badef2bf3a4a915d43a3a528e53ad518fbf49401d
+EBUILD drupal-7.37.ebuild 1877 SHA256 b6899d250dad323a543be6e63429952c0c36f2d7ec1b95a1636a4877bdcfd3db SHA512 935d5776b4409ab8877f80f17b0d77d079c4e1760fb56e4d22a8b6618447709cd9e3028419fa01bda414fc203d1f5251fce50f7cf4ac5c55960cf42c4fe2ea6f WHIRLPOOL 5e65b4c942371c4914ed5c7a8db7d2a2e28886c968b07f14a357684e4a6b58c372f7f4aebc3ca20794ea3bf1a6a6dae1854f7e4141f189804f3bd207423249f8
+EBUILD drupal-8.0.0_beta10.ebuild 2541 SHA256 cd38b4123d6c0b3f05609078500b2ee76f9483038a4f3b3f7d909c10d157e3ce SHA512 2d52a101724c460c785e71ebf2fe7b89863fc395a60860d495585ee3d19f87b5a961f0c0d1d1010d80f3862207ec49a610b205078d4a770772660d98b2c86e86 WHIRLPOOL 68af9e9004f1a73c1449c5e17b8e002619bf325e76640d763cf6081d2249834367d636be477e0f3e15c14954b16fb54ab7cb7557d4a61eb160c2e23ba3e95238
 EBUILD drupal-8.0.0_beta9.ebuild 2540 SHA256 c08bb645496700a867f9aa150ff5a7d8a8b4f82faf2af3ab8e2657363bf3e88a SHA512 2e9d3242d0934950b28ffe61459f2201ba6caefc83f197dbb56b5849f2524f582fdaf32ca0b0d294afa2e52a9022a431d905f71272a422b93112f1325bdd89e4 WHIRLPOOL b4375063abfbd9ca41a6fb098b7eb3d0676dc5cb837a21236f782817cee3612ac87055d52b05b92bb0aa3ec845e9dee902051ddc95a86e480d658d50bb7125bd
-MISC ChangeLog 18912 SHA256 13403451318d57d8bec4b7f97a83758663ccc31a370c60e8f0d1700290167498 SHA512 e8d8b6e7b50e7ccb24cced0f82d7f2fdd97b441d8e383e0017862885842d671c2942af878a65d11a6f851c3ed952e02ec7860ae5ebbda5b6c7bd6432662231a0 WHIRLPOOL a3d33e64e67f1078f23fea9aa6aac75af5a0d3fdc51c9ed44e1241866d87e560b607cbc59109ceb3c770b53f7a755427764c6209b2e85cccc29e04b06b2eeaec
+MISC ChangeLog 19137 SHA256 63719df7cf8e7400e1dddd6b6f645bdf957aa8cb25f6ee2da6e6da4688058432 SHA512 9b5fe9d52636a9ec91f71010aa1bbed164ce798ac358bc5d829dcca2cc444a1f76ee3ce7ce64f7e537e75a6ee5d90c930b9b597cb5428a7e7f89719e6583b94d WHIRLPOOL d2e1294ca331be942b2d3f3313380cb9396e9e6ae14f3d1c5101be6c4ae155e85ae8e1e5f04b3cef956c34d52c4e3f5629b338439b0b1272e4fadebb48b885ed
 MISC metadata.xml 334 SHA256 b1d825183ede1df66432e5d9cbc1f0f227d4c238ae1262c3cf492810d3ba5ce2 SHA512 1579decab2343f47cc16d738f45e6152b4f8567f6e0f53e05c587c126d1c05c94ecbbb1bc9aaaf6885bdb53b3bccedc0f63d125e3c245465c24a12a216bd4730 WHIRLPOOL a6446b0fcf9824990c48b511889a402e39f3edd5d9d7d8c58d574abd5435db1b5b4006407340589073e79f50a85d55c90ce1059a2944566cfe9901607adfecae
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlUedcIACgkQaezjy7sObphJXgD8Dm2xGQDLkq5iuFssZSlKoTfX
-ZkY4AIHhqQY8sNmw/PEA/jIiJgrFjSTx/w1hvC7LQpewo3FmWHeN/iyl1D8t7fPU
-=CCPY
+iQIcBAEBCAAGBQJVTRZsAAoJEC8ZTXQF1qEPKHYP/RM5TSU7ASqf2TlfHMLeGL2m
+BNlpcEL/IrfO/l0Q5mRb6QpHW6fuc9t9ua0TX/tbogqgaN0pCekxYp+PPGEZrGaP
+/1XALcUih0+R75Imlw3td+q3gAgla3zL09fxIwYjrM7D21YdpnCExhuo2HIXfRp9
+HPIHEd4WxAwcygII74T2bFRCickcKjO/DVupfUfe7smTwDv54DU3WRYOAqDIOd7U
+SreuXeGaGH6xamdiAR1lmAP7139uhmv8CjIgb0LYdAgTNWSDaIqfnJSgH3tV76l3
+r1DuDOGQ2rSn+/3WXOg8v0BqOUFOw085/R+HAe90r3lEHbyxgFIbQOcU5zgc7Yt0
+/N3Veg/Ku6e65ZIsEn/0SM4bDqjlVb8tBHQx94Mas+r79m6sh3EABByZq0X2Ga9m
+MD2mra7wv0T2z1dchyTwPXbKDPkpdisqfEfe3wRlB72sEc3OU3sXH0ek1N5Gz1mt
+Mt5sK6Q9dknpXbgvi1CSkcI6HoT/NjN2dqfUi6M2/RMoy4tGtToyVa4ljfuCU9DS
+lVHHx01Ev4kSmCvRuJ2spo9rL9URJCJupYUAAlAloOPdea4wbeL3icCACg4LNsSF
+Yk8vA1FxXz7hc+ltZFGSl6k7uSSYDPXsEWlbLw1pQ6KKeqkGq0r1l5JB7csDDszZ
+Tg1q4GQQbY9AZb8PnH+1
+=5cRs
 -----END PGP SIGNATURE-----
