@@ -1,6 +1,13 @@
 # ChangeLog for www-apps/drupal
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/drupal/ChangeLog,v 1.116 2015/04/03 11:13:35 jmbsvicetto Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/drupal/ChangeLog,v 1.117 2015/05/08 20:04:00 jmbsvicetto Exp $
+
+*drupal-8.0.0_beta10 (08 May 2015)
+*drupal-7.37 (08 May 2015)
+
+  08 May 2015; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
+  +drupal-7.37.ebuild, +drupal-8.0.0_beta10.ebuild:
+  Bump to releases 7.37 and 8.0.0_beta10.
 
 *drupal-7.36 (03 Apr 2015)
 *drupal-8.0.0_beta9 (03 Apr 2015)
